WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215084
[WebDriver] window.print should not invoke native UI
https://bugs.webkit.org/show_bug.cgi?id=215084
Summary
[WebDriver] window.print should not invoke native UI
Blaze Burg
Reported
2020-08-03 09:13:48 PDT
<
rdar://66079025
>
Attachments
Patch
(1.44 KB, patch)
2020-08-03 09:22 PDT
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2020-08-03 09:22:43 PDT
Created
attachment 405838
[details]
Patch
Devin Rousso
Comment 2
2020-08-03 10:57:03 PDT
Comment on
attachment 405838
[details]
Patch r=me
EWS
Comment 3
2020-08-03 11:00:49 PDT
Committed
r265207
: <
https://trac.webkit.org/changeset/265207
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 405838
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug