[WebDriver] window.print should not invoke native UI https://bugs.webkit.org/show_bug.cgi?id=215084

Reviewed by Devin Rousso.

This could be handled at a higher level if there is a valid use case to allow printing,
but I'm not aware of one. For now, this fixes a script evaluation hang on Mac and iOS.

* page/DOMWindow.cpp:
(WebCore::DOMWindow::print):
Don't call out to print delegates if this is a WebDriver-controlled page.


Canonical link: https://commits.webkit.org/227893@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265207 268f45cc-cd09-0410-ab3c-d52691b4dbfc